fixed bug on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -76,13 +76,16 @@ $sizeImg: 30vw;
     right: 26%;
     max-width: 650px;
     max-height: 559px;
+    height: 50vh;
     width: 65vw;
     &:hover {
         background: black;
     }
     img {
-        max-width: 750px;
-        max-height: 650px;
+        // max-width: 750px;
+        // max-height: 650px;
+        width: 100%;
+        height: 100%;
     }
 }
 
@@ -330,7 +333,7 @@ input::placeholder {
     .firstText, .secondText {
 
         flex: 0 2 auto;
-        max-width: 50%;
+        max-width: 70%;
         min-width: 1px;
         margin-left: 0;
     }
@@ -348,10 +351,10 @@ input::placeholder {
     .slider {
         position: absolute;
         right: 0px;
-        width: 375px !important;
+        // width: 375px !important;
         img {
-            width: 375px !important;
-            height: 537px !important;
+            // width: 375px !important;
+            // height: 537px !important;
         }
         .carousel-inner {
             > div:nth-child(3) {
@@ -408,6 +411,12 @@ input::placeholder {
 
     .slider {
         top: 150px;
+        // height: 350px !important;
+        // min-height: 350px;
+        width: 60vw;
+        img {
+            max-height: 350px;
+        }
     }
     
     .firstText, .secondText {
@@ -435,5 +444,9 @@ input::placeholder {
 
     .vk {
         width: 140px;
+    }
+
+    .submit {
+        width: 340px !important;
     }
 }
